force-app/main/default/objects/SCVSimulator_Conversation_Message__c/SCVSimulator_Conversation_Message__c.object-meta.xml
<CustomObject>
    <label>SCV Simulator Conversation Message</label>
    <nameField>
        <displayFormat>CM-{0000}</displayFormat>
        <label>SCV Simulator Conversation Message Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SCV Simulator Conversation Messages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>