force-app/main/default/objects/SCVSimulator_Conversation_Message__c/fields/Conversation_Order__c.field-meta.xml
<CustomField>
    <fullName>Conversation_Order__c</fullName>
    <label>Conversation Order</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>