force-app/main/default/objects/SCVSimulator_Conversation_Message__c/fields/SCVSimulator_Conversation__c.field-meta.xml
<CustomField>
    <fullName>SCVSimulator_Conversation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SCV Simulator Conversation</label>
    <referenceTo>SCVSimulator_Conversation__c</referenceTo>
    <relationshipLabel>SCV Simulator Conversation Messages</relationshipLabel>
    <relationshipName>SCVSimulator_Conversation_Messages</relationshipName>
    <type>Lookup</type>
</CustomField>